<resources>
    <string name="app_name">In-Market</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_customer">New Customer</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="customer_name">Name</string>
    <string name="customer_address">Address</string>
    <string name="customer_mobile_phone">Mobile Phone</string>
    <string name="title_article">Article</string>
    <string name="title_add_article">Add Article</string>
    <string name="article_name">Name</string>
    <string name="article_vendor_code">Vendor Code</string>
    <string name="please_fill_article_code">Please fill Article Name</string>
    <string name="please_fill_article_vendor_code">Please fill Vendor Code</string>
    <string name="name">Name:</string>
    <string name="vendor_code">Vendor Code:</string>
    <string name="delete">Delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_store">Store</string>
    <string name="title_add_store">Add Store</string>
    <string name="code">Code</string>
    <string name="address">Address:</string>
    <string name="please_fill_store_name">Please fill store name</string>
    <string name="store_name">Store Name</string>
    <string name="store">Store</string>
    <string name="stock_in">Stock-In</string>
    <string name="stock_out">Stock-Out</string>
    <string name="stock_transfer">Transfer</string>

</resources>