<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ksharshembie.condex.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ksharshembie.condex.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ksharshembie.condex.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ksharshembie.condex.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/customerFragment"
        android:name="com.ksharshembie.condex.ui.customer.CustomerFragment"
        android:label="@string/new_customer"
        tools:layout="@layout/fragment_customer" />
    <fragment
        android:id="@+id/articleFragment"
        android:name="com.ksharshembie.condex.ui.profile.article.ArticleFragment"
        android:label="@string/title_article"
        tools:layout="@layout/fragment_article" />
    <fragment
        android:id="@+id/articleAddFragment"
        android:name="com.ksharshembie.condex.ui.profile.article.ArticleAddFragment"
        android:label="@string/title_add_article"
        tools:layout="@layout/fragment_article_add" />


</navigation>