<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/std_margin">

    <TextView
        android:id="@+id/storeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_storeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/std_margin"
        android:text="@string/store"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/storeName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/storeAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storeName" />

    <TextView
        android:id="@+id/tv_storeAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/std_margin"
        android:text="Store Addess"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/storeAddress"
        app:layout_constraintTop_toBottomOf="@id/tv_storeName" />

    <Button
        android:id="@+id/stockIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/stockOut"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stockOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/std_margin"
        android:text="@string/stock_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/stockTransfer"
        app:layout_constraintStart_toEndOf="@id/stockIn" />

    <Button
        android:id="@+id/stockTransfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_transfer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/stockOut" />

</androidx.constraintlayout.widget.ConstraintLayout>