<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/std_margin">


    <TextView
        android:id="@+id/store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/std_margin"
        android:text="@string/store_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/store_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/store_adress"
        app:layout_constraintTop_toBottomOf="@id/store_name"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/address"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_store_address"
        app:layout_constraintStart_toEndOf="@id/store_adress"
        app:layout_constraintTop_toBottomOf="@id/tv_store_name"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/std_margin"
        android:text="Store Addess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>